--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +54,10 @@
     "@storybook/addon-storysource": "^6.1.20",
     "@storybook/node-logger": "^6.1.20",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.20"
+    "@storybook/react": "^6.1.20",
+    "jest-image-snapshot": "^4.4.0",
+    "jest-puppeteer": "^4.4.0",
+    "puppeteer": "^8.0.0",
+    "start-server-and-test": "^1.12.0"
   }
 }
